--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"concurrently": "^5.0.1"
+		"concurrently": "^5.0.1",
+		"nodemon": "^2.0.3"
 	},
 	"dependencies": {
 		"@sendgrid/mail": "^7.1.0",
