--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"dev": "nodemon app.js"
+		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+		"build": "tsc",
+		"prestart": "npm run build",
+		"start": "node ./app.js",
+		"dev": "nodemon app.tsx"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.6",
+		"@types/node": "^14.0.1",
+		"@types/react": "^16.9.35",
 		"concurrently": "^5.0.1",
-		"nodemon": "^2.0.3"
+		"nodemon": "^2.0.3",
+		"rimraf": "^3.0.2",
+		"tslint": "^6.1.2",
+		"tslint-eslint-rules": "^5.4.0",
+		"typescript": "^3.9.2"
 	},
 	"dependencies": {
 		"@sendgrid/mail": "^7.1.0",
+		"@zeit/next-typescript": "^1.1.1",
 		"axios": "^0.19.2",
 		"bcrypt": "^4.0.1",
 		"body-parser": "^1.19.0",
