--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"connect-mongo": "^3.2.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.1.3",
 		"express-session": "^1.17.1",
 		"express-validator": "^6.4.0",
 		"helmet": "^3.22.0",
